<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:id="@+id/neighbour_detail_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.neighbour_detail.NeighbourDetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/neighbour_detail_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:background="@color/black800"
            android:padding="20dp">

            <TextView
                android:id="@+id/neighbour_detail_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Caroline"
                android:textSize="@dimen/title_level1_size"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/backgroundGray">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/neighbour_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TitleLevel2"
                        tools:text="Caroline"/>

                    <TextView
                        android:id="@+id/neighbour_location"
                        style="@style/NeighbourInfoFieldStyle"
                        android:drawableStart="@drawable/ic_location_24"
                        tools:text="Saint pierre du mont à 5km"/>

                    <TextView
                        android:id="@+id/neighbour_phone_number"
                        style="@style/NeighbourInfoFieldStyle"
                        android:drawableStart="@drawable/ic_phone_24"
                        tools:text="+1 574 647 3667"/>

                    <TextView
                        android:id="@+id/neighbour_social_network"
                        style="@style/NeighbourInfoFieldStyle"
                        android:drawableStart="@drawable/ic_world_24"
                        tools:text="www.facebook.com/caroline"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TitleLevel2"
                        android:layout_marginBottom="10dp"
                        android:text="@string/about_me_title"
                        />

                    <TextView
                        android:id="@+id/neighbour_about_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@tools:sample/lorem/random"
                        android:maxLines="4"
                        android:ellipsize="end"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/toggle_favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_marginBottom="37dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_star_border_yellow_24dp"
        app:backgroundTint="@color/white"
        android:contentDescription="@string/add_to_favorites_content_desc"
        app:maxImageSize="28dp"/>


    <ImageButton
        android:id="@+id/back_button"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_24"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button_content_desc" />

</FrameLayout>

