<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="favorite_added_successfully">%1$s  a été ajouté à vos favoris avec succès</string>
    <string name="favorite_removed_successfully">%1$s a été supprimé de vos favoris</string>
    <string name="add_to_favorites_content_desc">Add to favorites</string>
    <string name="back_button_content_desc">Back Button</string>
    <string name="about_me_title">A propos de moi</string>
</resources>
